avoid bleeding css into the nav bar

--- a/appengine/static/less/rosebot.less
+++ b/appengine/static/less/rosebot.less
@@ -8,14 +8,21 @@
   margin-bottom: 25px;
 }
 
-.rosebot-header h1 {
+.rosebot-header {
  color: #FFF;
 }
 
-p, li {
-  font-size: 12pt;
-  line-height: 1.5;
+.rosebot-header h1 {
+ color: #DDD;
 }
+
+.rosebot {
+  p, li {
+    font-size: 12pt;
+    line-height: 1.5;
+  }
+}
+
 
 .no-gap-before-list {
   margin-bottom: 0px;
